# vikunja-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
skills/vikunja-cli/: SKILL.md
src/: client.rs  config.rs  main.rs  output.rs  types.rs  util.rs
src/commands/: label.rs  mod.rs  project.rs  task.rs
